# src/main/java/com/owt/api/core/skill/Level.java
@@ -1,0 +1,8 @@
+package com.owt.api.core.skill;
+
+public enum Level
+{
+    JUNIOR,
+    SENIOR,
+    EXPERT
+}
